--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,11 @@
 }
 
 </style>
+         <a href="http://127.0.0.1:8000/">
+       <button type="button" style="height: 44px;
+       color: #b224ef;
+       margin-top: 50px;margin-left: 50px;" id="final">Go to home screen</button>
+        </a>
 
 <div class="container">
     <div class="row" style="padding: 50px;text-align: center;">
