--- a/templates/signup.html
+++ b/templates/signup.html
@@ -137,6 +137,9 @@ if(pass1.value.match(passw))
                             <textarea  class="input--style-3" type="text" rows="4" cols="50"  placeholder="Permanent Address" name="address" required></textarea>
                         </div>
                         <div class="input-group">
+                            <textarea  class="input--style-3" type="text" rows="4" cols="50"  placeholder="Pincode" name="pincode" required></textarea>
+                        </div>
+                        <div class="input-group">
                             <input class="input--style-3" type="email"  maxlength="50"placeholder="Email" name="email" required >
                         </div>
                         <div class="input-group">
